<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_height"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_16_dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/romance_bck"
        android:text="@string/romance"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_height"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_16_dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/work_out_bck"
        android:text="@string/work_out"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_height"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_16_dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/ghazal_bck"
        android:text="@string/ghazal"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_height"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_16_dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/edm_bck"
        android:text="@string/edm"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_height"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_16_dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/classical_bck"
        android:text="@string/classical"
        android:textAppearance="?android:textAppearanceMedium"/>

</LinearLayout>